<resources>
    <string name="app_name">ArquitecturaMVPBase</string>
    <string name="product_name">Nombre</string>
    <string name="product_description">Descripción</string>
    <string name="product_quantity">Cantidad</string>
    <string name="product_price">Precio</string>
    <string name="loading_message">Cargando...</string>
    <string name="create_button">Crear</string>
    <string name="okResponseCreateProduct">Producto Creado Correctamente</string>
    <string name="errResponseCreateProduct">Error Creando el Producto</string>

    <string name="text_description">Descripción</string>
    <string name="text_name">Nombre</string>
    <string name="text_price">Precio</string>
    <string name="text_quantity">Cantidad</string>
    <string name="text_button">Crear producto</string>

    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="validate_internet">Error de conectividad</string>
    <string name="correct">Se ha eliminado correctamente</string>
    <string name="error_delete_product">Ha ocurrido un error eliminando el producto</string>
    <string name="deleteProduct">Producto eliminado</string>
    <string name="error">Error</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>



    <string name="customer_name">Nombre</string>
    <string name="customer_surname">Apellido</string>
    <string name="customer_phone_number">Número Telefónico</string>
    <string name="customer_phone_description">Descripción</string>
    <string name="customer_location_type">Tipo Geolocalizacion</string>
    <string name="customer_location_latitud">Latitud</string>
    <string name="customer_location_longitud">Longitud</string>
    <string name="text_surname">Apellido</string>
    <string name="text_phone_number">Número Telefónico</string>
    <string name="text_phone_description">Descripción</string>
    <string name="text_location_type">Tipo de Geolocalizacion</string>
    <string name="text_location_latitud">Latitud</string>
    <string name="text_location_longitud">Longitud</string>

    <string name="okResponseCreateCustomer">Cliente Creado Correctamente</string>
    <string name="errResponseCreateCustomer">Error Creando el Cliente</string>

</resources>
