<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.5">


        <RelativeLayout
            android:id="@+id/customerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/customer_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customer_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_detail_name"
                android:text="@string/customer_surname"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/customer_detail_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/customer_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/customer_detail_surname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/customer_detail_name"
                android:text="@string/customer_surname"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerLayout"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/customer_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_phone_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
            />

            <TextView
                android:id="@+id/customer_phone_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_phone_number"
                android:text="@string/customer_phone_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
            />

            <TextView
                android:id="@+id/customer_phone_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/customer_phone_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/customer_phone_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/customer_phone_number_value"
                android:text="@string/customer_phone_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customer_phone_description"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/customer_location_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/customer_location_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_location_type"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/customer_location_type_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/customer_location_type"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
                />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_location_type_layout"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/customer_location_latitud_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/customer_location_latitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_location_latitud"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


                    <TextView
                        android:id="@+id/customer_location_latitud_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/customer_location_latitud"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@+id/customer_location_latitud_layout">

                    <TextView
                        android:id="@+id/customer_location_longitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_location_longitud"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


                    <TextView
                        android:id="@+id/customer_location_longitud_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/customer_location_longitud"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                </LinearLayout>



            </LinearLayout>

        </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:onClick="deleteCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:src="@drawable/ic_delete_forever_black_24dp" />

</LinearLayout>